Addded sidebar, new design and others

--- a/debt-md-front-end/index.html
+++ b/debt-md-front-end/index.html
@@ -9,8 +9,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <link href="static/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+
   </head>
   <body>
+    <script src="https://www.gstatic.com/charts/loader.js"></script>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
